update function export excel v3, fixs swagger excel downloads
