# public/swagger.json
@@ -999,28 +999,76 @@
                 "tags": [
                     "Invoice Pelanggan"
                 ],
-                "summary": "Generate Excel file containing invoice data",
-                "description": "This endpoint generates and downloads an Excel file that includes a summary of all invoice data.",
+                "summary": "Membuat Excel Invoice Pelanggan dengan semua data",
                 "operationId": "add7be923ec99d7cdadbbcbe95212421",
                 "responses": {
                     "200": {
-                        "description": "Excel file successfully generated and downloaded.",
-                        "headers": {
-                            "Content-Type": {
-                                "description": "The MIME type of the returned file (application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)",
-                                "schema": {
-                                    "type": "string",
-                                    "example": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                                }
-                            },
-                            "Content-Disposition": {
-                                "description": "Attachment header with the filename",
-                                "schema": {
-                                    "type": "string",
-                                    "example": "attachment; filename=rekap_all_data_invoice_2024-06-14.xlsx"
-                                }
-                            }
+                        "description": "Invoice pelanggan dengan ID tertentu berhasil dibuat"
+                    },
+                    "500": {
+                        "description": "Internal server error occurred while generating the Excel file."
+                    }
+                }
+            }
+        },
+        "/api/invoice/excel/bydate/create/{startDate}/{endDate}": {
+            "get": {
+                "tags": [
+                    "Invoice Pelanggan"
+                ],
+                "summary": "Membuat Excel Invoice Pelanggan berdasarkan rentang tanggal",
+                "operationId": "4e2f49de8d688d48166f460284f7f4e6",
+                "parameters": [
+                    {
+                        "name": "startDate",
+                        "in": "path",
+                        "description": "ID Pelanggan",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
                         }
+                    },
+                    {
+                        "name": "endDate",
+                        "in": "path",
+                        "description": "ID Pelanggan",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Invoice pelanggan dengan ID tertentu berhasil dibuat"
+                    },
+                    "500": {
+                        "description": "Internal server error occurred while generating the Excel file."
+                    }
+                }
+            }
+        },
+        "/api/pdf/create/{id}": {
+            "get": {
+                "tags": [
+                    "Invoice Pelanggan"
+                ],
+                "summary": "Membuat Invoice Pelanggan",
+                "operationId": "aae1c3a226c0170bb6284c40eeac8431",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID Pelanggan",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Invoice pelanggan dengan ID tertentu berhasil dibuat"
                     },
                     "500": {
                         "description": "Internal server error occurred while generating the Excel file."
